aws_security_group.jenkins.tf
resource "aws_security_group" "jenkins" {
  # checkov:skip=CKV_AWS_382: Unrestricted outbound access required for resource functionality
  name        = var.jenkins_name
  description = "Open default ports for jenkins ssh and web 8080"
  vpc_id      = var.vpc_id

  ingress {
    description     = "Jenkins admin port"
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    security_groups = [aws_security_group.elb[0].id]
  }

  ingress {
    description = "SSH port"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.ssh_allowed_ip]
  }

  egress {
    description = "Allow outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    # tfsec:ignore:AWS009
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = var.common_tags
}
